// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Methods Cases > parameter added to existing method 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetHeaderImages(appOverview: { appid: number }): string
+  GetHeaderImages(appOverview: { appid: number }, t: unknown): string
}"
`;

exports[`Comparator Methods Cases > parameter becomes optional 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetOptions(options: string): string
+  GetOptions(options?: string): string
}"
`;

exports[`Comparator Methods Cases > parameter mismatch typed as enum 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,7 +1,7 @@
export interface Foo {
-  GetOptions(options: EOptions): string
+  GetOptions(options: string): string
}

export enum EOptions {
  Option1,
  Option2,"
`;

exports[`Comparator Methods Cases > parameter removed from existing method 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface PopupManager {
-  GetHeaderImages(appOverview: { appid: number }, otherInfo: string): string
+  GetHeaderImages(appOverview: { appid: number }): string
}"
`;
